--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
     <properties>
         <!-- spring版本号 -->
         <spring.version>4.0.2.RELEASE</spring.version>
+        <mybatis.version>3.3.1</mybatis.version>
+        <slf4j.version>1.7.7</slf4j.version>
+         <log4j.version>1.2.17</log4j.version>
+
     </properties>
     <dependencies>
         <!-- aspectjweaver -->
@@ -90,6 +94,12 @@
             <artifactId>mybatis-spring</artifactId>
             <version>1.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>${mybatis.version}</version>
+        </dependency>
+
         <!-- jsp标准标签库 -->
 
         <dependency>
@@ -128,6 +138,15 @@
     </dependencies>
     <build>
         <finalName>BookStore</finalName>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
     </build>
-
 </project>
