--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <properties>
         <!-- spring版本号 -->
         <spring.version>4.0.2.RELEASE</spring.version>
-        <mybatis.version>3.3.1</mybatis.version>
+        <mybatis.version>3h.3.1</mybatis.version>
         <slf4j.version>1.7.7</slf4j.version>
          <log4j.version>1.2.17</log4j.version>
 
